Squashed commit of the following:
commit f04a5972b6262b7bc1b0aadffab9efaacfd44ca6
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Wed Jul 01 23:15:23 2026 +0100

	Update AISDataBlock.java

commit 16ad4ef92514accbe06563e038c841686cab63eb
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Wed Jul 01 22:48:50 2026 +0100

	Tidy up AIS graphics

commit 6e93b8edadc1f885ef9de47a34861bac7b3f1d42
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Wed Jul 01 22:07:24 2026 +0100

	Logger (#314)

commit cb1c699484486ce6b8afa644fcb156666ef5ea92
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Tue Jun 30 21:57:05 2026 +0100

	update way command params are handled

commit 88a9861dfe69d2c78d97bbfbf8a20c42503f36aa
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Tue Jun 30 01:16:14 2026 +0100

	Update OneBandControl.java

commit 62095ddf5479d87296ccdf5216e8b0eb258e72cf
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Tue Jun 30 00:48:38 2026 +0100

	More XML summaries

commit 905fa90a81b9734d24783a52c27a90ee89f1fdc7
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Tue Jun 30 00:25:46 2026 +0100

	update getSummaryString

commit 0564c5ee9fcd93e8a1e2140b8a79cbf02e8bbd87
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Mon Jun 29 23:50:42 2026 +0100

	Update command line handling

commit 5f20100b67e89dfd418b548f6828535ed9393817
Author: stabbutt <100229685+stabbutt@users.noreply.github.com>
Date:   Mon Jun 29 13:58:55 2026 -0700

	Smruc main merge (#313)

commit 137cd54f8eaee2d45c09f5ac2d1f7b435dcc103b
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Thu Jun 25 11:45:26 2026 +0100

	Bearing and crossed bearing errors

commit 835318b596661bc74575bf8c68296827a40bb1f2
Author: Douglas